# llmwiki

./: .env.example  .gitignore  README.md  pyproject.toml
.atl/: skill-registry.md
data/: hash.db
openspec/: config.yaml
openspec/changes/archive/2026-05-31-servicio-ingesta-llmwiki/: design.md  exploration.md  proposal.md  spec.md  tasks.md  verify-report.md
openspec/specs/file-watching/: spec.md
openspec/specs/hash-tracking/: spec.md
openspec/specs/ingestion-cli/: spec.md
openspec/specs/llm-classification/: spec.md
openspec/specs/text-extraction/: spec.md
openspec/specs/wiki-generation/: spec.md
src/llmwiki/: __init__.py  __main__.py  classifier.py  cli.py  config.py  file_watcher.py  hash_tracker.py  link_enricher.py  models.py  pipeline.py  state.py  wiki_writer.py  youtube.py
src/llmwiki/extractors/: __init__.py  base.py  ocr.py  pdf.py  text.py
wiki/: clean-test.md  fine-tunning-de-modelos-pequeños-con-unsloth-studio.md
wiki/.obsidian/: workspace.json
