[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmwiki-ingest"
version = "0.1.0"
description = "Automatic ingestion and classification pipeline for LLM-powered wikis"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "langgraph>=0.2",
    "httpx>=0.28",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "watchdog>=5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pdf = ["docling>=2.0"]

[project.scripts]
llmwiki-ingest = "llmwiki.cli:app"

[tool.hatch.build]
packages = ["src/llmwiki"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
